--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="toast_install_app">Please install an app to perform action.</string>
     <string name="toast_wrongPW">Uuups. Wrong password.</string>
     <string name="toast_exit">Do you want to exit?</string>
+    <string name="twice_exit">Press back again to exit!</string>
     <string name="toast_whiteList">Whitelist deleted.</string>
     <string name="toast_list">Delete whole list?</string>
     <string name="toast_whiteList_confirm">Do you really want to delete the whitelist?</string>
@@ -330,6 +331,7 @@
 
     <string name="about_cont_summary">Helped to implement \"adblocking\", the five tabs and \"request desktop site\".</string>
     <string name="about_cont_summary_2">Russian translation.</string>
+    <string name="about_cont_summary_3">Chinese translation.</string>
 
 
     //File chooser
